[feat]: set today's video - get videos by date
