# apis/src/modules/videos/video.routes.ts
@@ -1,10 +1,12 @@
 import { Router } from "express";
-import { videoStatistics } from "./videos.controller";
+import * as videoController from "./videos.controller"
 import { registerDefinition } from "swaggiffy";
 
 const videoRouter = Router();
 
-videoRouter.get("/watched/:user_id", videoStatistics);
+videoRouter.get("/watched/:user_id", videoController.videoStatistics);
+videoRouter.put("/set-as-today/:video_id", videoController.setTodaysVideo);
+videoRouter.get("/statistics/:date", videoController.getVideosForDate);             
 
 export default videoRouter;
 
